src/examples/errors/unhandled_return.del

def moot() -> int {

    return 1;
}

def main() -> nil {

    moot();

    return;
}